--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,37 @@
+@font-face {
+	font-family: 'CircularSp';
+	src: url('/fonts/CircularSpotifyText-Black.otf') format('otf');
+	font-weight: 900;
+}
+
+@font-face {
+	font-family: 'CircularSp';
+	src: url('/fonts/CircularSpotifyText-Bold.otf') format('otf');
+	font-weight: 700;
+}
+
+@font-face {
+	font-family: 'CircularSp';
+	src: url('/fonts/CircularSpotifyText-Medium.otf') format('otf');
+	font-weight: 500;
+}
+
+@font-face {
+	font-family: 'CircularSp';
+	src: url('/fonts/CircularSpotifyText-Light.otf') format('otf');
+	font-weight: 300;
+}
+
+@font-face {
+	font-family: 'CircularSp';
+	src: url('/fonts/CircularSpotifyText-Book.otf') format('otf');
+	font-weight: 400;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+	@apply font-spotify;
+}
