--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,37 +1,35 @@
 @font-face {
 	font-family: 'CircularSp';
-	src: url('/fonts/CircularSpotifyText-Black.otf') format('otf');
-	font-weight: 900;
+	src: url('/fonts/CircularSpotifyText-Light.woff') format('woff');
+	font-weight: 300;
 }
-
 @font-face {
 	font-family: 'CircularSp';
-	src: url('/fonts/CircularSpotifyText-Bold.otf') format('otf');
-	font-weight: 700;
-}
-
-@font-face {
-	font-family: 'CircularSp';
-	src: url('/fonts/CircularSpotifyText-Medium.otf') format('otf');
-	font-weight: 500;
-}
-
-@font-face {
-	font-family: 'CircularSp';
-	src: url('/fonts/CircularSpotifyText-Book.otf') format('otf');
+	src: url('/fonts/CircularStd-Book.woff') format('woff');
 	font-weight: 400;
 }
-
 @font-face {
 	font-family: 'CircularSp';
-	src: url('/fonts/CircularSpotifyText-Light.otf') format('otf');
-	font-weight: 300;
+	src: url('/fonts/CircularSpotifyText-Medium.woff') format('woff');
+	font-weight: 500;
+}
+@font-face {
+	font-family: 'CircularSp';
+	src: url('/fonts/CircularSpotifyText-Bold.woff') format('woff');
+	font-weight: 700;
+}
+@font-face {
+	font-family: 'CircularSp';
+	src: url('/fonts/CircularSpotifyText-Black.woff') format('woff');
+	font-weight: 900;
 }
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body {
-	@apply font-spotify;
+@layer base {
+	body {
+		font-family: CircularSp, sans-serif;
+	}
 }
