--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@
 }
 @font-face {
 	font-family: 'CircularSp';
-	src: url('/fonts/CircularStd-Book.woff') format('woff');
+	src: url('/fonts/CircularSp-Book.woff2') format('woff2');
 	font-weight: 400;
 }
 @font-face {
