Fix some stylings

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,6 +31,9 @@
 @layer base {
 	* {
 		--contentSpacing: clamp(16px, 16px + (1293 - 600)/424 * 8px, 24px);
+	}
+
+	body {
 		--top-bar-color: 18, 18, 18;
 	}
 
